# Terminal-64

./: .gitignore  .mcp.json  CLAUDE.md  README.md  index.html  package-lock.json  package.json  terminal64-delegation-2026-04-30T02-59-53-683Z-ac9b6cf8.md  terminal64-delegation-2026-04-30T03-36-58-239Z-94e817c3.md  terminal64-delegation-2026-04-30T03-56-06-151Z-9f72d378.md  vite.config.ts
.codex/: config.toml
.wolf/: anatomy.md  buglog.json  cerebrum.md  cron-manifest.json  cron-state.json  island-debug.md  memory.md  save-bug-investigation.md  scroll-investigation.md  suggestions.json  token-ledger.json  voice-research-shared.md  widget-plugins-research.md
docs/: provider-events.md  provider-picker-verification.md  provider-scaffold.md  wake-training.md  (+1 more)
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/bundled-widgets/project-intel/: index.html  main.js  styles.css
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_manager.rs  browser_manager.rs  claude_manager.rs  discord_bot.rs  lib.rs  mic_manager.rs  permission_mcp.rs  permission_server.rs  plugin_manifest_store.rs  pty_manager.rs  types.rs  vector_store.rs  voice_manager.rs  widget_bridge_broker.rs  widget_instructions.rs  widget_server.rs  widget_webview_manager.rs
src-tauri/src/providers/: claude.rs  codex.rs  cursor.rs  events.rs  mod.rs  registry.rs  snapshots.rs  traits.rs  util.rs
src-tauri/src/voice/: adapters.rs  audio_file.rs  command_stt.rs  intent.rs  mod.rs  models.rs  moonshine.rs  testkit.rs  vad.rs  wake.rs  whisper.rs
(+177 files in other folders)
